--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -9,11 +9,11 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="user-dashboard loader-holder">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">WELCOME TO FOODONLINE</h4>
-                            <p class="text-center">Please fill this form to get yourself onboarded in the foodOnline marketplace.</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">PARTNER WITH FOODONLINE</h4>
+                            <p class="text-center">Register with foodOnline marketplace and get more customers.</p>
                             <hr>
                             <div id="restaurant-sets-holder">
-                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'registerUser' %}">
+                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'registerVendor' %}" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
@@ -34,9 +34,20 @@
                                                                 </div>
                                                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                     <div class="field-holder">
+                                                                        <label>Vendor name</label>{{v_form.vendor_name}}
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                                                    <div class="field-holder">
+                                                                        <label>Vendor license</label>{{v_form.vendor_license}}
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                                                    <div class="field-holder">
                                                                         <label>Email Address</label>{{form.email}}
                                                                     </div>
                                                                 </div>
+                                                                
                                                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                     <div class="field-holder">
                                                                         <label>Username</label>{{form.username}}
@@ -44,7 +55,7 @@
                                                                 </div>
                                                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                     <div class="field-holder">
-                                                                        <label>phone</label>{{form.phone}}
+                                                                        <label>Phone</label>{{form.phone}}
                                                                     </div>
                                                                 </div>
                                                             </li>
