--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,16 @@
 	<link href="{% static 'css/custom.css' %}" rel=stylesheet>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	{% if '/profile/' in request.GET %}
 	<script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
-	<script src="{% static 'js/custom.js' %}"></script>
+	{% endif %}
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	
 	<!-- JAVASCRIPT -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="{% static 'js/modernizr.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
+	<script src="{% static 'js/custom.js' %}"></script>
 
 	<style>
 		body, .main-section p, .mce-content-body p{
